--- a/npcs/Artificer Subclasses.yml
+++ b/npcs/Artificer Subclasses.yml
@@ -1,5 +1,5 @@
    - - Alchemist Abilities:
-       - Spellcasting: DC
+       - Spellcasting: Spell DC
          1st Level: Healing Word, Ray of Sickness
          3rd Level: Flaming Sphere, Melf's Acid Arrow
          5th Level: Gaseous Form, Mass Healing Word
@@ -33,7 +33,7 @@
                              
                              
     - - Battle Smith Abilities:
-        - Spellcasting:
+        - Spellcasting: Spell DC
           3rd Level: Heroism, Shield
           5th Level: Branding Smite, Warding Bond
           9th Level: Aura of Vitality, Conjure Barrage
@@ -84,7 +84,7 @@
                              
                              
    - - Armorer Abilities:
-       - Spellcasting:
+       - Spellcasting: Spell DC
          3rd Level: Magic Missle, Shield
          5th Level: Mirror Image, Shatter
          9th Level: Hypnotic Patetrn, Fire Ball
@@ -127,7 +127,7 @@
                                        
                                        
    - - Artillerist Abilities:
-       - Artillerist Spells:
+       - Spellcasting: Spell DC
          3rd Level: Shield, Thunderwave
          5th Level: Scortching Ray, Shatter
          9th Level: Fireball, Wind Wall
@@ -160,3 +160,14 @@
                              - You and your allies have half cover while within 10 feet of a cannon you create with Eldritch Cannon, as a result of a shimmering field of magical protection that the cannon emits.
                              - You can now have two cannons at the same time. You can create two with the same action (but not the same spell slot), and you can activate both of them with the same bonus action. You determine 
                                whether the cannons are identical to each other or different. You can't create a third cannon while you have two.
+                               
+                               
+                               
+   - - Tinker Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Floating Disk, Searing Smite
+         5th Level: Darkness, Find Traps
+         9th Level: Create Food and Water, Counterspell
+         13th Level: Confusion, Wall of Fire
+         17th Level: Cone of cold, Wall of Force
+       - 
