--- a/npcs/Druid Subclasses.yml
+++ b/npcs/Druid Subclasses.yml
@@ -132,3 +132,72 @@
        - Natures Sanctuary: creatures of the natural world sense your connection to Nature and become hesitant to Attack you. When a beast or plant creature attacks you, that creature must make a Wisdom saving throw against your
                             druid spell save DC. On a failed save, the creature must choose a different target, or the Attack automatically misses. On a successful save, the creature is immune to this Effect for 24 hours. The 
                             creature is aware of this Effect before it makes its Attack against you.
+                            
+                            
+                            
+   - - Circle of Wildfire Abilities:
+       - Spellcasting: Spell DC
+         2nd Level: Burning Hands, Cure Wounds
+         3rd Level: Flaming Sphere, Scorching Ray
+         5th Level: Plant Growth, Revivify
+         7th Level: Aura of Life, Fire Shield
+         9th Level: Flame Strike, Mass Cure Wounds
+       - Summon Wildfire Spirit: You can summon the primal spirit bound to your soul. As an action, you can expend one use of your Wild Shape feature to summon your wildfire spirit, rather than assuming a beast form. The spirit 
+                                 appears in an unoccupied space of your choice that you can see within 30 feet of you. Each creature within 10 feet of the spirit (other than you) when it appears must succeed on a Dexterity 
+                                 saving throw against your spell save DC or take 2d6 fire damage. The spirit is friendly to you and your companions and obeys your commands. See this creature's game statistics in the Wildfire 
+                                 Spirit stat block, which uses your proficiency bonus (PB) in several places. You determine the spirit's appearance. Some spirits take the form of a humanoid figure made of gnarled branches 
+                                 covered in flame, while others look like beasts wreathed in fire. In combat, the spirit shares your initiative count, but it takes its turn immediately after yours. The only action it takes on 
+                                 its turn is the Dodge action, unless you take a bonus action on your turn to command it to take another action. That action can be one in its stat block or some other action. If you are 
+                                 incapacitated, the spirit can take any action of its choice, not just Dodge. The spirit manifests for 1 hour, until it is reduced to 0 hit points, until you use this feature to summon the spirit 
+                                 again, or until you die.
+                                 Wildfire Spirit:
+                                 Small elemental
+                                 Armor Class: 13 (natural armor)
+                                 Hit Points: 5 + five times your druid level
+                                 Speed: 30 ft., fly 30 ft. (hover)
+                                 STR 10(+0) DEX 14(+2) CON 14(+2) INT 13(+1) WIS 15(+2) CHA 11(+0)
+                                 Damage Immunities: fire
+                                 Condition Immunities: charmed, frightened, grappled, prone, restrained
+                                 Senses: darkvision 60 ft., passive Perception 12
+                                 Languages: understands the languages you speak
+                                 Challenge: —
+                                 Proficiency Bonus: equals your bonus
+                                 Actions
+                                 Flame Seed. Ranged Weapon Attack: your spell attack modifier to hit, range 60 ft., one target you can see. Hit: 1d6 + PB fire damage.
+                                 Fiery Teleportation: The spirit and each willing creature of your choice within 5 feet of it teleport up to 15 feet to unoccupied spaces you can see. Then each creature within 5 feet of the space
+                                 that the spirit left must succeed on a Dexterity saving throw against your spell save DC or take 1d6 + PB fire damage.
+       - Enhanced Bond: the bond with your wildfire spirit enhances your destructive and restorative spells. Whenever you cast a spell that deals fire damage or restores hit points while your wildfire spirit is summoned, roll a 
+                        d8, and you gain a bonus equal to the number rolled to one damage or healing roll of the spell. In addition, when you cast a spell with a range other than self, the spell can originate from you or your 
+                        wildfire spirit.
+       - Cauterizing Flames: you gain the ability to turn death into magical flames that can heal or incinerate. When a Small or larger creature dies within 30 feet of you or your wildfire spirit, a harmless spectral flame 
+                             springs forth in the dead creature's space and flickers there for 1 minute. When a creature you can see enters that space, you can use your reaction to extinguish the spectral flame there and either 
+                             heal the creature or deal fire damage to it. The healing or damage equals 2d10 + your Wisdom modifier. You can use this reaction a number of times equal to your proficiency bonus, and you regain all 
+                             expended uses when you finish a long rest.
+       - Blazing Revival: the bond with your wildfire spirit can save you from death. If the spirit is within 120 feet of you when you are reduced to 0 hit points and thereby fall unconscious, you can cause the spirit to drop to
+                          0 hit points. You then regain half your hit points and immediately rise to your feet. Once you use this feature, you can't use it again until you finish a long rest.
+                          
+                          
+                          
+   - - Circle of the Shepherd Abilities:
+       - Speech of the Woods: you gain the ability to converse with beasts and many fey. You learn to speak, read, and write Sylvan. In addition, beasts can understand your speech, and you gain the ability to decipher their 
+                              noises and motions. Most beasts lack the intelligence to convey or understand sophisticated concepts, but a friendly beast could relay what it has seen or heard in the recent past. This ability 
+                              doesn’t grant you any special friendship with beasts, though you can combine this ability with gifts to curry favor with them as you would with any nonplayer character.
+       - Spirit Totem: you gain the ability to call forth nature spirits and use them to influence the world around you. As a bonus action, you can magically summon an incorporeal spirit to a point you can see within 60 feet of 
+                       you. The spirit creates an aura in a 30-foot radius around that point. It counts as neither a creature nor an object, though it has the spectral appearance of the creature it represents. As a bonus action,
+                       you can move the spirit up to 60 feet to a point you can see. The spirit persists for 1 minute. Once you use this feature, you can’t use it again until you finish a short or long rest. The effect of the 
+                       spirit’s aura depends on the type of spirit you summon from the options below.
+                       - Bear Spirit: The bear spirit grants you and your allies its might and endurance. Each creature of your choice in the aura when the spirit appears gains temporary hit points equal to 5 + your druid level.
+                                      In addition, you and your allies gain advantage on Strength checks and Strength saving throws while in the aura.
+                       - Hawk Spirit: The hawk spirit is a consummate hunter, aiding you and your allies with its keen sight. When a creature makes an attack roll against a target in the spirit’s aura, you can use your reaction 
+                                      to grant advantage to that attack roll. In addition, you and your allies have advantage on Wisdom (Perception) checks while in the aura.
+                       - Unicorn Spirit: The unicorn spirit lends its protection to those nearby. You and your allies gain advantage on all ability checks made to detect creatures in the spirit’s aura. In addition, if you cast a
+                                         spell using a spell slot that restores hit points to any creature inside or outside the aura, each creature of your choice in the aura also regains hit points equal to your druid level.
+       - Mighty Summoner: beasts and fey that you conjure are more resilient than normal. Any beast or fey summoned or created by a spell that you cast gains two benefits;
+                          - The creature appears with more hit points than normal; 2 extra hit points per Hit Die it has. 
+                          - The damage from its natural weapons is considered magical for the purpose of overcoming immunity and resistance to nonmagical attacks and damage.
+       - Guardian Spirit: your Spirit Totem safeguards the beasts and fey that you call forth with your magic. When a beast or fey that you summoned or created with a spell ends its turn in your Spirit Totem aura, that creature 
+                          regains a number of hit points equal to half your druid level.
+       - Faithful Summons: the nature spirits you commune with protect you when you are the most defenseless. If you are reduced to 0 hit points or are incapacitated against your will, you can immediately gain the benefits of 
+                           Conjure Animals as if it were cast with a 9th-level spell slot. It summons four beasts of your choice that are challenge rating 2 or lower. The conjured beasts appear within 20 feet of you. If they 
+                           receive no commands from you, they protect you from harm and attack your foes. The spell lasts for 1 hour, requiring no concentration, or until you dismiss it (no action required). Once you use this 
+                           feature, you can’t use it again until you finish a long rest.
