--- a/npcs/Paladin Subclasses.yml
+++ b/npcs/Paladin Subclasses.yml
@@ -25,7 +25,7 @@
                          
                          
                          
-   - - Oath of free Commerce Abilities:
+   - - Oath of Free Commerce Abilities:
        - Spellcasting: DC
          3rd Level: Unseen Servant, Identify
          5th Level: Arcane Lock, See Invsibility
@@ -117,5 +117,140 @@
        - Dread Lord: you can, as an action, surround yourself with an aura of gloom that lasts for 1 minute. The aura reduces any bright light in a 30-foot radius around you to dim light. Whenever an enemy that is frightened by
                      you starts its turn in the aura, it takes 4d10 psychic damage. Additionally, you and any creatures of your choosing in the aura are draped in deeper shadow. Creatures that rely on sight have disadvantage on
                      attack rolls against creatures draped in this shadow. While the aura lasts, you can use a bonus action on your turn to cause the shadows in the aura to attack one creature. Make a melee spell attack against
-                     the target. If the attack hits, the target takes necrotic damage equal to 3d10 + your Charisma modifier. After activating the aura, you can't do so again until you finish a long rest.        
+                     the target. If the attack hits, the target takes necrotic damage equal to 3d10 + your Charisma modifier. After activating the aura, you can't do so again until you finish a long rest.     
+
+
+
+   - - Oath of Redemption Abilities: 
+       - Spellcasting:
+         3rd Level: Sanctuary, Sleep
+         5th Level: Calm Emotions, Hold Person
+         9th Level: Counterspell, Hypnotic Pattern
+         13th Level: Resilient Sphere, Stoneskin
+         17th Level: Hold Monster, Wall of Force
+       - Channel Divinity: 
+         - Emissary of Peace: You can use your Channel Divinity to augment your presence with divine power. As a bonus action, you grant yourself a +5 bonus to Charisma (Persuasion) checks for the next 10 minutes.
+         - Rebuke the Violent: You can use your Channel Divinity to rebuke those who use violence. Immediately after an attacker within 30 feet of you deals damage with an attack against a creature other than you, you can use 
+                               your reaction to force the attacker to make a Wisdom saving throw. On a failed save, the attacker takes radiant damage equal to the damage it just dealt. On a successful save, it takes half as much damage.
+       - Aura of the Guardian: you can shield your allies from harm at the cost of your own health. When a creature within 10 feet of you takes damage, you can use your reaction to magically take that damage, instead of that 
+                               creature taking it. This feature doesn't transfer any other effects that might accompany the damage, and this damage can't be reduced in any way. At 18th level, the range of this aura increases to 
+                               30 feet.
+       - Protective Spirit: a holy presence mends your wounds in combat. You regain hit points equal to 1d6 + half your paladin level if you end your turn in combat with fewer than half of your hit points remaining and you 
+                            aren’t incapacitated.
+       - Emissary of Redemption: you become an avatar of peace, which gives you the following benefits;
+                                 - You have resistance to all damage dealt by other creatures (their attacks, spells, and other effects).
+                                 - Whenever a creature damages you, it takes radiant damage equal to half the amount it dealt to you.
+                                 If you attack a creature, cast a spell on it, or deal damage to it by any means but this feature, neither benefit works against that creature until you finish a long rest.                    
   
+
+
+   - - Oath of Vengeance Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Bane, Hunter's Mark
+         5th Level: Hold Person, Misty Step
+         9th Level: Haste, Protection from Energy
+         13th Level: Banishment, Dimension Door
+         17th Level: Hold Monster, Scrying
+       - Channel Divinity:
+         - Abjure Enemy: As an action, you present your holy symbol and speak a prayer of denunciation, using your Channel Divinity. Choose one creature within 60 feet of you that you can see. That creature must make a Wisdom 
+                         saving throw, unless it is immune to being frightened. Fiends and undead have disadvantage on this saving throw.
+                         - On a failed save, the creature is frightened for 1 minute or until it takes any damage. While frightened, the creature's speed is 0, and it can't benefit from any bonus to its speed.
+                         - On a successful save, the creature's speed is halved for 1 minute or until the creature takes any damage.
+         - Vow of Enmity: As a bonus action, you can utter a vow of enmity against a creature you can see within 10 feet of you, using your Channel Divinity. You gain advantage on attack rolls against the creature for 1 minute 
+                          or until it drops to 0 hit points or falls unconscious.
+       - Relentless Avenger: your supernatural focus helps you close off a foe's retreat. When you hit a creature with an opportunity attack, you can move up to half your speed immediately after the attack and as part of the 
+                             same reaction. This movement doesn't provoke opportunity attacks.
+       - Soul of Vengeance: the authority with which you speak your Vow of Enmity gives you greater power over your foe. When a creature under the effect of your Vow of Enmity makes an attack, you can use your reaction to make a
+                            melee weapon attack against that creature if it is within range.
+       - Avenging Angel: you can assume the form of an angelic avenger. Using your action, you undergo a transformation. For 1 hour, you gain the following benefits;
+                         - Wings sprout from your back and grant you a flying speed of 60 feet.
+                         - You emanate an aura of menace in a 30-foot radius. The first time any enemy creature enters the aura or starts its turn there during a battle, the creature must succeed on a Wisdom saving throw or 
+                           become frightened of you for 1 minute or until it takes any damage. Attack rolls against the frightened creature have advantage.
+                         Once you use this feature, you can't use it again until you finish a long rest.
+
+
+
+   - - Oath of Conquest Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Armor of Agathys, Command
+         5th Level: Hold Person, Spiritual Weapon
+         9th Level: Bestow Curse, Fear
+         13th Level: Dominate Beast, Stoneskin
+         17th Level: Cloudkill, Dominate Person
+       - Channel Divinity: you gain the following two Channel Divinity options.
+         - Conquering Presence: You can use your Channel Divinity to exude a terrifying presence. As an action, you force each creature of your choice that you can see within 30 feet of you to make a Wisdom saving throw. On a 
+                                failed save, a creature becomes frightened of you for 1 minute. The frightened creature can repeat this saving throw at the end of each of its turns, ending the effect on itself on a success.
+         - Guided Strike: You can use your Channel Divinity to strike with supernatural accuracy. When you make an attack roll, you can use your Channel Divinity to gain a +10 bonus to the roll. You make this choice after you 
+                          see the roll, but before the DM says whether the attack hits or misses.
+       - Aura of Conquest: you constantly emanate a menacing aura while you’re not incapacitated. The aura extends 10 feet from you in every direction, but not through total cover. If a creature is frightened of you, its speed 
+                           is reduced to 0 while in the aura, and that creature takes psychic damage equal to half your paladin level if it starts its turn there. the range of this aura increases to 30 feet.
+       - Scornful Rebuke: those who dare to strike you are psychically punished for their audacity. Whenever a creature hits you with an attack, that creature takes psychic damage equal to your Charisma modifier (minimum of 1) 
+                          if you’re not incapacitated.
+       - Invincible Conqueror: you gain the ability to harness extraordinary martial prowess. As an action, you can magically become an avatar of conquest, gaining the following benefits for 1 minute;
+                               - You have resistance to all damage.
+                               - When you take the Attack action on your turn, you can make one additional attack as part of that action.
+                               - Your melee weapon attacks score a critical hit on a roll of 19 or 20 on the d20.
+                               Once you use this feature, you can’t use it again until you finish a long rest.
+                               
+                               
+                               
+   - - Oath of Ancients Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Ensnaring Strike, Speak with Animals
+         5th Level: Moonbeam, Misty Step
+         9th Level: Plant Growth, Protection from Energy
+         13th Level: Ice Storm, Stoneskin
+         17th Level: Commune with Nature, Tree Stride
+       - Channel Divinity: you gain the following two Channel Divinity options.
+         - Natures Wrath: You can use your Channel Divinity to invoke primeval forces to ensnare a foe. As an action, you can cause spectral vines to spring up and reach for a creature within 10 feet of you that you can see. The
+                          creature must succeed on a Strength or Dexterity saving throw (its choice) or be restrained. While restrained by the vines, the creature repeats the saving throw at the end of each of its turns. On a 
+                          success, it frees itself and the vines vanish.
+         - Turn the Faithless: You can use your Channel Divinity to utter ancient words that are painful for fey and fiends to hear. As an action, you present your holy symbol, and each fey or fiend within 30 feet of you that 
+                               can hear you must make a Wisdom saving throw. On a failed save, the creature is turned for 1 minute or until it takes damage. A turned creature must spend its turns trying to move as far away from 
+                               you as it can, and it can't willingly move to a space within 30 feet of you. It also can't take reactions. For its action, it can use only the Dash action or try to escape from an effect that 
+                               prevents it from moving. If there's nowhere to move, the creature can use the Dodge action. If the creature's true form is concealed by an illusion, shapeshifting, or other effect, that form is 
+                               revealed while it is turned.
+       - Aura of Warding: ancient magic lies so heavily upon you that it forms an eldritch ward. You and friendly creatures within 10 feet of you have resistance to damage from spells. At 18th level, the range of this aura 
+                          increases to 30 feet.
+       - Undying Sentinel: when you are reduced to 0 hit points and are not killed outright, you can choose to drop to 1 hit point instead. Once you use this ability, you can't use it again until you finish a long rest. 
+                           Additionally, you suffer none of the drawbacks of old age, and you can't be aged magically.
+       - Elder Champion: you can assume the form of an ancient force of nature, taking on an appearance you choose. For example, your skin might turn green or take on a bark-like texture, your hair might become leafy or 
+                         moss-like, or you might sprout antlers or a lion-like mane. Using your action, you undergo a transformation. For 1 minute, you gain the following benefits;
+                         - At the start of each of your turns, you regain 10 hit points.
+                         - Whenever you cast a paladin spell that has a casting time of 1 action, you can cast it using a bonus action instead.
+                         - Enemy creatures within 10 feet of you have disadvantage on saving throws against your paladin spells and Channel Divinity options.
+                         Once you use this feature, you can't use it again until you finish a long rest.
+                         
+                         
+                         
+   - - Oath of Crown Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Command, Compelled Duel
+         5th Level: Warding Bond, Zone of Truth
+         9th Level: Aura of Vitality, Spirit Guardians
+         13th Level: Banishment, Guardian of Faith
+         17th Level: Circle of Power, Geas
+       - Channel Divinity: you gain the following two Channel Divinity options.
+         - Champion Challenge: As a bonus action, you issue a challenge that compels other creatures to do battle with you. Each creature of your choice that you can see within 30 feet of you must make a Wisdom saving throw. On 
+                               a failed save, a creature can't willingly move more than 30 feet away from you. This effect ends on the creature if you are incapacitated or die or if the creature is more than 30 feet away from 
+                               you.
+         - Turn the Tide: As a bonus action, you can bolster injured creatures with your Channel Divinity. Each creature of your choice that can hear you within 30 feet of you regains hit points equal to 1d6 + your Charisma 
+                          modifier (minimum of 1) if it has no more than half of its hit points.
+       - Divine Allegiance: when a creature within 5 feet of you takes damage, you can use your reaction to magically substitute your own health for that of the target creature, causing that creature not to take the damage. 
+                            Instead, you take the damage. This damage to you can't be reduced or prevented in any way.
+       - Unyielding Saint: you have advantage on saving throws to avoid becoming paralyzed or stunned.
+       - Exalted Champion: your presence on the field of battle is an inspiration to those dedicated to your cause. You can use your action to gain the following benefits for 1 hour;
+                           - You have resistance to bludgeoning, piercing, and slashing damage from nonmagical weapons.
+                           - Your allies have advantage on death saving throws while within 30 feet of you.
+                           - You have advantage on Wisdom saving throws, as do your allies within 30 feet of you.
+                           This effect ends early if you are incapacitated or die. Once you use this feature, you can't use it again until you finish a long rest.
+                           
+                           
+                           
+   - - Oath of Crown Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Command, Compelled Duel
+         5th Level: Warding Bond, Zone of Truth
+         9th Level: Aura of Vitality, Spirit Guardians
+         13th Level: Banishment, Guardian of Faith
+         17th Level: Circle of Power, Geas
