--- a/npcs/Ranger Subclasses.yml
+++ b/npcs/Ranger Subclasses.yml
@@ -1,5 +1,5 @@
    - - Gloom Stalker Conclave Abilities:
-       - Gloom Stalker Spellcasting: Spell DC 
+       - Spellcasting: Spell DC 
           - 3rd Level: Disguise Self 
           - 5th Level: Rope Trick
           - 9th Level: Fear
@@ -20,7 +20,7 @@
                         
                         
    - - Monster Slayer Conclave Abilities:
-       - Monster Slayer Spellcasting: Spell DC 
+       - Spellcasting: Spell DC 
           - 3rd Level: Protection from Evil and Good 
           - 5th Level: Zone of Truth
           - 9th Level: Magic Circle
@@ -43,7 +43,7 @@
                           
                           
    - - Swarmkeeper Conclave Abilities:
-       - Swarmkeeper Magic: Spell DC
+       - Spellcasting: Spell DC
           - 3rd Level: Faerie Fire, Mage Hand 
           - 5th Level: Web
           - 9th Level: Gaseous Form
@@ -67,7 +67,7 @@
                              
                              
    - - Fey Wanderer Conclave Abilities:
-       - Fey Wanderer Magic: Spell DC
+       - Spellcasting: Spell DC
           - 3rd Level: Charm Person 
           - 5th Level: Misty Step
           - 9th Level: Dispel Magic
@@ -87,3 +87,48 @@
        - Misty Wanderer: you can slip in and out of the Feywild to move in a blink of an eye; you can cast Misty Step without expending a spell slot. You can do so a number of times equal to your Wisdom modifier (minimum of once)
                          and you regain all expended uses when you finish a long rest. In addition, whenever you cast Misty Step, you can bring along one willing creature you can see within 5 feet of you. That creature teleports to an
                          unoccupied space of your choice within 5 feet of your destination space.
+                         
+                         
+   - - Hunter Conclave Abilities:
+       - Hunters Prey: you gain one of the following features of your choice.
+                       - Colossus Slayer: Your tenacity can wear down the most potent foes. When you hit a creature with a weapon attack, the creature takes an extra 1d8 damage if it’s below its hit point maximum. You can deal 
+                                          this extra damage only once per turn.
+                       - Giant Killer: When a Large or larger creature within 5 feet of you hits or misses you with an attack, you can use your reaction to attack that creature immediately after its attack, provided that you can
+                                       see the creature.
+                       - Horde Breaker: Once on each of your turns when you make a weapon attack, you can make another attack with the same weapon against a different creature that is within 5 feet of the original target and 
+                                        within range of your weapon.
+       - Defensive Tactics: you gain one of the following features of your choice.
+                            - Escape the Horde: Opportunity attacks against you are made with disadvantage.
+                            - Multiattack Defense: When a creature hits you with an attack, you gain a +4 bonus to AC against all subsequent attacks made by that creature for the rest of the turn.
+                            - Steel Will: You have advantage on saving throws against being frightened.
+       - Multiattack: you gain one of the following features of your choice.
+                      - Volley: You can use your action to make a ranged attack against any number of creatures within 10 feet of a point you can see within your weapon’s range. You must have ammunition for each target, as 
+                                normal, and you make a separate attack roll for each target
+                      - Whirlwind Attack: You can use your action to make melee attacks against any number of creatures within 5 feet of you, with a separate attack roll for each target.
+       - Superior Hunters Defense: you gain one of the following features of your choice.
+                                   - Evasion: When you are subjected to an effect, such as a red dragon’s fiery breath or a lightning bolt spell, that allows you to make a Dexterity saving throw to take only half damage, you 
+                                              instead take no damage if you succeed on a saving throw, and only half damage if you fail
+                                   - Stand Against the Tide: When a hostile creature misses you with a melee attack, you can use your reaction to force that creature to repeat the same attack against another creature (other than
+                                                             itself) of your choice.
+                                   - Uncanny Dodge: When an attacker that you can see hits you with an attack, you can use your reaction to halve the attack’s damage against you.   
+                                   
+                                   
+                                   
+   - - Horizon Walker Conclave Abilities:
+       - Spellcasting: Spell DC
+          - 3rd Level: Protection from Evil and Good 
+          - 5th Level: Misty Step
+          - 9th Level: Haste
+          - 13th Level: Banishment
+          - 17th Level: Teleportation Circle
+       - Detect Portal: you gain the ability to magically sense the presence of a planar portal. As an action, you detect the distance and direction to the closest planar portal within 1 mile of you. Once you use this feature, 
+                        you can't use it again until you finish a short or long rest. See the "Planar Travel" section in chapter 2 of the Dungeon Master's Guide for examples of planar portals.
+       - Planar Warrior: you learn to draw on the energy of the multiverse to augment your attacks. As a bonus action, choose one creature you can see within 30 feet of you. The next time you hit that creature on this turn with 
+                         a weapon attack, all damage dealt by the attack becomes force damage, and the creature takes an extra 1d8 force damage from the attack. When you reach 11th level in this class, the extra damage increases
+                         to 2d8.
+       - Ethereal Step: you learn to step through the Ethereal Plane. As a bonus action on your turn, you can cast the Etherealness spell with this feature, without expending a spell slot, but the spell ends at the end of the 
+                        current turn. Once you use this feature, you can’t use it again until you finish a short or long rest.
+       - Distant Strike: you gain the ability to pass between the planes in a blink of an eye. When you use the Attack action, you can teleport up to 10 feet before each attack to an unoccupied space you can see. If you attack 
+                         at least two different creatures with the action, you can make one additional attack with it against a third creature.
+       - Spectral Defense: your ability to move between planes enables you to slip through the planar boundaries to lessen the harm done to you during battle. When you take damage from an attack, you can use your reaction to 
+                           give yourself resistance to all of that attack's damage on this turn.
