--- a/npcs/Warlock Subclasses.yml
+++ b/npcs/Warlock Subclasses.yml
@@ -124,7 +124,7 @@
        
        
        
-   - - Pact of The Great Old One Abilities:
+   - - The Great Old One Abilities:
          - Expanded Spell List:
             1st Level: Dissonant Whispers, Hideous Laughter
             2nd Level: Detect Thoughts, Phantasmal Force
@@ -141,3 +141,140 @@
          - Create Thrall: you gain the ability to infect a humanoid's mind with the alien magic of your patron. You can use your action to touch an incapacitated humanoid. That creature is then charmed by you until a Remove 
                           Curse spell is cast on it, the charmed condition is removed from it, or you use this feature again. You can communicate telepathically with the charmed creature as long as the two of you are on the 
                           same plane of existence.
+                          
+                          
+                          
+   - - The Undying Abilities:
+         - Expanded Spell List:
+            1st Level: False Life, Ray of Sickness
+            2nd Level: Blindness/Deafness, Silence
+            3rd Level: Feign Death, Speak with Dead
+            4th Level: Aura of Life, Death Ward
+            5th Level: Contagion, Legend Lore
+         - Among the Dead: you learn the Spare the Dying cantrip, which counts as a warlock cantrip for you. You also have advantage on saving throws against any disease. Additionally, undead have difficulty harming you. If an 
+                           undead targets you directly with an attack or a harmful spell, that creature must make a Wisdom saving throw against your spell save DC (an undead needn't make the save when it includes you in an area 
+                           effect, such as the explosion of Fireball). On a failed save, the creature must choose a new target or forfeit targeting someone instead of you, potentially wasting the attack or spell. On a successful
+                           save, the creature is immune to this effect for 24 hours. An undead is also immune to this effect for 24 hours if you target it with an attack or a harmful spell.
+         - Defy Death: you can give yourself vitality when you cheat death or when you help someone else cheat it. You can regain hit points equal to 1d8 + your Constitution modifier (minimum of 1 hit point) when you succeed on 
+                       a death saving throw or when you stabilize a creature with Spare the Dying. Once you use this feature, you can't use it again until you finish a long rest.
+         - Undying Nature: you can hold your breath indefinitely, and you don't require food, water, or sleep, although you still require rest to reduce exhaustion and still benefit from finishing short and long rests. In 
+                           addition, you age at a slower rate. For every 10 years that pass, your body ages only 1 year, and you are immune to being magically aged.
+         - Indestructible Life: you partake of some of the true secrets of the Undying. On your turn, you can use a bonus action to regain hit points equal to 1d8 + your warlock level. Additionally, if you put a severed body 
+                                part of yours back in place when you use this feature, the part reattaches. Once you use this feature, you can't use it again until you finish a short or long rest.
+                                
+                                
+                                
+   - - The Undead Abilities:
+         - Expanded Spell List:
+            1st Level: Bane, False Life
+            2nd Level: Blindness/Deafness, Phantasmal Force
+            3rd Level: Speak with Dead, Phantom Steed
+            4th Level: Death Ward, Greater Invisibility
+            5th Level: Antilife Shell, Cloudkill
+         - Form of Dread: As a bonus action, you transform for 1 minute. You gain the following benefits while transformed;
+                          - You gain temporary hit points equal to 1d10 + your warlock level.
+                          - Once during each of your turns, when you hit a creature with an attack, you can force it to make a Wisdom saving throw, and if the saving throw fails, the target is frightened of you until the end of 
+                            your next turn.
+                          - You are immune to the frightened condition.
+                          You can transform a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest. The appearance of your Form of Dread reflects some aspect of your 
+                          patron. For example, your form could be a shroud of shadows forming the crown and robes of your lich patron, or your face might transform into bat-like features due to your vampire patron.
+         - Grave Touched: your patron’s powers have a profound effect on your body and magic. You don’t need to eat, drink, or breathe. In addition, when you hit a creature with an attack and roll damage against the creature, 
+                          you can replace the damage type with necrotic damage. While you are using your Form of Dread, you can roll one additional damage die when determining the necrotic damage the target takes.
+         - Mortal Husk: Your connection to undeath and necrotic energy now saturates your body. You have resistance to necrotic damage. If you are transformed using your Form of Dread, you instead become immune to necrotic 
+                        damage. In addition, when you are reduced to 0 hit points, you can cause your body to explode. Each creature within 30 feet of you takes necrotic damage equal to 2d10 + your warlock level. You then revive
+                        with 1 hit point in your previous space, along with your gear, and you gain 1 level of exhaustion. Once you revive this way, you can’t do so again until you finish 1d4 long rests.
+         - Spirit Projection: your body is now simply a vessel for your spirit. As an action, you can project your spirit from your body. The body you leave behind is unconscious and in a state of suspended animation. Your 
+                              spirit can remain outside your body for up to 1 hour or until your concentration is broken (as if concentrating on a spell). When your projection ends, your spirit returns to your body or your body 
+                              magically teleports to your spirit’s space (your choice). While projecting your spirit, you gain the following benefits;
+                              - Your spirit and body gain resistance to bludgeoning, piercing, and slashing damage.
+                              - When you cast a spell of the conjuration or necromancy school, the spell doesn’t require verbal, somatic, or material components that lack a gold cost.
+                              - You have a flying speed equal to your walking speed and can hover. You can move through creatures and objects as if they were difficult terrain, but you take 1d10 force damage if you end your turn inside a creature or an object.
+                              - While you are using your Form of Dread, once during each of your turns when you deal necrotic damage to a creature, you regain hit points equal to half the amount of necrotic damage dealt.
+                              Once you use this feature, you can’t do so again until you finish a long rest.
+                              
+                              
+                              
+   - - The Fiend Abilities:
+         - Expanded Spell List:
+            1st Level: Burning Hands, Command
+            2nd Level: Blindness/Deafness, Scorching Ray
+            3rd Level: Fireball, Stinking Cloud
+            4th Level: Fire Shield, Wall of Fire
+            5th Level: Flame Strike, Hallow
+         - Dark Ones Blessing: when you reduce a hostile creature to 0 hit points, you gain temporary hit points equal to your Charisma modifier + your warlock level (minimum of 1).
+         - Dark Ones Own Luck: you can call on your patron to alter fate in your favor. When you make an ability check or a saving throw, you can use this feature to add a d10 to your roll. You can do so after seeing the initial
+                               roll but before any of the roll's effects occur. Once you use this feature, you can't use it again until you finish a short or long rest.
+         - Fiendish Resilience: you can choose one damage type when you finish a short or long rest. You gain resistance to that damage type until you choose a different one with this feature. Damage from magical weapons or 
+                                silver weapons ignores this resistance.
+         - Hurl Through Hell: when you hit a creature with an attack, you can use this feature to instantly transport the target through the lower planes. The creature disappears and hurtles through a nightmare landscape. At 
+                              the end of your next turn, the target returns to the space it previously occupied, or the nearest unoccupied space. If the target is not a fiend, it takes 10d10 psychic damage as it reels from its 
+                              horrific experience. Once you use this feature, you can't use it again until you finish a long rest.
+                              
+                              
+                              
+   - - The Fathomless Abilities:
+         - Expanded Spell List:
+            1st Level: Create or Destroy Water, Thunderwave
+            2nd Level: Gust of Wind, Silence
+            3rd Level: Lightning Bolt, Sleet Storm
+            4th Level: Control Water, Summon Elemental
+            5th Level: Bigby's Hand (appears as a tentacle), Cone of Cold
+         - Tentacle of the Deep: you can magically summon a spectral tentacle that strikes at your foes. As a bonus action, you create a 10-foot-long tentacle at a point you can see within 60 feet of you. The tentacle lasts for 
+                                 1 minute or until you use this feature to create another tentacle. When you create the tentacle, you can make a melee spell attack against one creature within 10 feet of it. On a hit, the target 
+                                 takes 1d8 cold damage, and its speed is reduced by 10 feet until the start of your next turn. When you reach 10th level in this class, the damage increases to 2d8. As a bonus action on your turn,
+                                 you can move the tentacle up to 30 feet and repeat the attack . You can summon the tentacle a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a 
+                                 long rest.
+         - Gift of the Sea: you gain a swimming speed of 40 feet, and you can breathe underwater.
+         - Oceanic Soul: you are now even more at home in the depths. You gain resistance to cold damage. In addition, when you are fully submerged, any creature that is also fully submerged can understand your speech, and you 
+                         can understand theirs.
+         - Guardian Coil: your Tentacle of the Deeps can defend you and others, interposing itself between them and harm. When you or a creature you can see takes damage while within 10 feet of the tentacle, you can use your 
+                          reaction to choose one of those creatures and reduce the damage to that creature by 1d8. When you reach 10th level in this class, the damage reduced by the tentacle increases to 2d8.
+         - Grasping Tentacles: You learn the spell Black Tentacles. It counts as a warlock spell for you, but it doesn't count against the number of spells you know. You can also cast it once without using a spell slot, and you 
+                               regain the ability to do so when you finish a long rest. Whenever you cast this spell, your patron's magic bolsters you, granting you a number of temporary hit points equal to your warlock level. 
+                               Moreover, damage can't break your concentration on this spell.
+         - Fathomless Plunge: you can magically open temporary conduits to watery destinations. As an action, you can teleport yourself and up to five other willing creatures that you can see within 30 feet of you. Amid a whirl 
+                              of tentacles, you all vanish and then reappear up to 1 mile away in a body of water you've seen (pond size or larger) or within 30 feet of it, each of you appearing in an unoccupied space within 30 
+                              feet of the others. Once you use this feature, you can't use it again until you finish a short or long rest.
+                              
+                              
+                              
+   - - The Celestial Abilities:
+         - Expanded Spell List:
+            1st Level: Cure Wounds, Guiding Bolt
+            2nd Level: Flaming Sphere, Lesser Restoration
+            3rd Level: Daylight, Revivify
+            4th Level: Guardian of Faith, Wall of Fire
+            5th Level: Flame Strike, Greater Restoration
+         - Bonus Cantrips: you learn the Light and Sacred Flame cantrips. They count as warlock cantrips for you, but they don’t count against your number of cantrips known.
+         - Healing Light: you gain the ability to channel celestial energy to heal wounds. You have a pool of d6s that you spend to fuel this healing. The number of dice in the pool equals 1 + your warlock level. As a bonus 
+                          action, you can heal one creature you can see within 60 feet of you, spending dice from the pool. The maximum number of dice you can spend at once equals your Charisma modifier (minimum of one die). 
+                          Roll the dice you spend, add them together, and restore a number of hit points equal to the total. Your pool regains all expended dice when you finish a long rest.
+         - Radiant Soul: your link to the Celestial allows you to serve as a conduit for radiant energy. You have resistance to radiant damage, and when you cast a spell that deals radiant or fire damage, you add your Charisma 
+                        modifier to one radiant or fire damage roll of that spell against one of its targets.
+         - Celestial Resistance: you gain temporary hit points whenever you finish a short or long rest. These temporary hit points equal your warlock level + your Charisma modifier. Additionally, choose up to five creatures you
+                                 can see at the end of the rest. Those creatures each gain temporary hit points equal to half your warlock level + your Charisma modifier.
+         - Searing Vengeance: the radiant energy you channel allows you to resist death. When you have to make a death saving throw at the start of your turn, you can instead spring back to your feet with a burst of radiant 
+                              energy. You regain hit points equal to half your hit point maximum, and then you stand up if you so choose. Each creature of your choice that is within 30 feet of you takes radiant damage equal to 
+                              2d8 + your Charisma modifier, and is blinded until the end of the current turn. Once you use this feature, you can’t use it again until you finish a long rest.
+                              
+                              
+                              
+   - - The Archfey Abilities:
+         - Expanded Spell List:
+            1st Level: Faerie Fire, Sleep
+            2nd Level: Calm Emotions, Phantasmal Force
+            3rd Level: Blink, Plant Growth
+            4th Level: Dominate Beast, Greater Invisibility
+            5th Level: Dominate Person, Seeming
+         - Fey Presence: your patron bestows upon you the ability to project the beguiling and fearsome presence of the fey. As an action, you can cause each creature in a 10-foot cube originating from you to make a Wisdom 
+                         saving throw against your warlock spell save DC. The creatures that fail their saving throws are all charmed or frightened by you (your choice) until the end of your next turn. Once you use this feature,
+                         you can't use it again until you finish a short or long rest.
+         - Misty Escape: you can vanish in a puff of mist in response to harm. When you take damage, you can use your reaction to turn invisible and teleport up to 60 feet to an unoccupied space you can see. You remain invisible
+                         until the start of your next turn or until you attack or cast a spell. Once you use this feature, you can't use it again until you finish a short or long rest.
+         - Beguiling Defenses: your patron teaches you how to turn the mind-affecting magic of your enemies against them. You are immune to being charmed, and when another creature attempts to charm you, you can use your 
+                               reaction to attempt to turn the charm back on that creature. The creature must succeed on a Wisdom saving throw against your warlock spell save DC or be charmed by you for 1 minute or until the 
+                               creature takes any damage.
+         - Dark Delirium: you can plunge a creature into an illusory realm. As an action, choose a creature that you can see within 60 feet of you. It must make a Wisdom saving throw against your warlock spell save DC. On a 
+                          failed save, it is charmed or frightened by you (your choice) for 1 minute or until your concentration is broken (as if you are concentrating on a spell). This effect ends early if the creature takes 
+                          any damage. Until this illusion ends, the creature thinks it is lost in a misty realm, the appearance of which you choose. The creature can see and hear only itself, you, and the illusion. You must 
+                          finish a short or long rest before you can use this feature again.
