--- a/npcs/Bard Subclasses.yml
+++ b/npcs/Bard Subclasses.yml
@@ -132,3 +132,106 @@
                                                 Please note that a magic tattoo can be placed on any available body part unless the item description says otherwise. Tattoos carrying Bardic Inspiration through the Lasting 
                                                 Inspiration class feature do not count as magical for the purposes of determining whether a body part is used, unless those tattoos are also magical. Tattoos created through the 
                                                 Tattoo Adept’s Dancing Ink feature also do not count against this maximum.
+                                                
+                                                
+                                                
+   - - College of Whispers Abilities:
+       - Psychic Blades: you gain the ability to make your weapon attacks magically toxic to a creature's mind. When you hit a creature with a weapon attack, you can expend one use of your Bardic Inspiration to deal an 
+                         additional 2d6 psychic damage to that target. You can do so only once per round on your turn. The psychic damage increases when you reach certain levels in this class, increasing to 3d6 at 5th level, 5d6
+                         at 10th level, and 8d6 at 15th level.
+       - Words of Terror: you learn to infuse innocent-seeming words with an insidious magic that can inspire terror. If you speak to a humanoid alone for at least 1 minute, you can attempt to seed paranoia and fear into its 
+                          mind. At the end of the conversation, the target must succeed on a Wisdom saving throw against your spell save DC or be frightened of you or another creature of your choice. The target is frightened in 
+                          this way for 1 hour, until it is attacked or damaged, or until it witnesses its allies being attacked or damaged. If the target succeeds on its saving throw, the target has no hint that you tried to 
+                          frighten it. Once you use this feature, you can’t use it again until you finish a short rest or long rest.
+       - Mantle of Whispers: you gain the ability to adopt a humanoid's persona. When a humanoid dies within 30 feet of you, you can magically capture its shadow using your reaction. You retain this shadow until you use it or 
+                             you finish a long rest. You can use the shadow as an action. When you do so, it vanishes, magically transforming into a disguise that appears on you. You now look like the dead person, but healthy 
+                             and alive. This disguise lasts for 1 hour or until you end it as a bonus action. While you're in the disguise, you gain access to all information that the humanoid would freely share with a casual 
+                             acquaintance. Such information includes general details on its background and personal life, but doesn't include secrets. The information is enough that you can pass yourself off as the person by 
+                             drawing on its memories. Another creature can see through this disguise by succeeding on a Wisdom (Insight) check contested by your Charisma (Deception) check. You gain a +5 bonus to your check. 
+                             Once you capture a shadow with this feature, you can't capture another one with it until you finish a short or long rest.
+       - Shadow Lore: you gain the ability to weave dark magic into your words and tap into a creature’s deepest fears. As an action, you magically whisper a phrase that only one creature of your choice within 30 feet of you can
+                      hear. The target must make a Wisdom saving throw against your spell save DC. It automatically succeeds if it doesn’t share a language with you or if it can’t hear you. On a successful saving throw, your 
+                      whisper sounds like unintelligible mumbling and has no effect. If the target fails its saving throw, it is charmed by you for the next 8 hours or until you or your allies attack or damage it. It interprets 
+                      the whispers as a description of its most mortifying secret. While you gain no knowledge of this secret, the target is convinced you know it. While charmed in this way, the creature obeys your commands for 
+                      fear that you will reveal its secret. It won’t risk its life for you or fight for you, unless it was already inclined to do so. It grants you favors and gifts it would offer to a close friend. When the 
+                      effect ends, the creature has no understanding of why it held you in such fear. Once you use this feature, you can’t use it again until you finish a long rest.
+                      
+                      
+                      
+   - - College of Valor Abilities:
+       - Bonus Proficiencies: you gain proficiency with medium armor, shields, and martial weapons.
+       - Combat Inspiration: you learn to inspire others in battle. A creature that has a Bardic Inspiration die from you can roll that die and add the number rolled to a weapon damage roll it just made. Alternatively, when an 
+                             attack roll is made against the creature, it can use its reaction to roll the Bardic Inspiration die and add the number rolled to its AC against that attack, after seeing the roll but before knowing 
+                             whether it hits or misses.
+       - Extra Attack: you can attack twice, instead of once, whenever you take the Attack action on your turn.
+       - Battle Magic: you have mastered the art of weaving spellcasting and weapon use into a single harmonious act. When you use your action to cast a bard spell, you can make one weapon attack as a bonus action.
+       
+       
+       
+   - - College of Swords Abilities:
+       - Bonus Proficiencies: you gain proficiency with medium armor and the scimitar. If you’re proficient with a simple or martial melee weapon, you can use it as a spellcasting focus for your bard spells.
+       - Fighting Style: you adopt a particular style of fighting as your specialty. Choose one of the following options. You can't take a Fighting Style option more than once, even if you later get to choose again.
+                         - Dueling: When you are wielding a melee weapon in one hand and no other weapons, you gain a +2 bonus to damage rolls with that weapon.
+                         - Two-Weapon Fighting: When you engage in two-weapon fighting, you can add your ability modifier to the damage of the second attack.
+       - Blade Flourish: you learn to conduct impressive displays of martial prowess and speed. Whenever you take the Attack action on your turn, your walking speed increases by 10 feet until the end of the turn, and if a weapon
+                         attack that you make as part of this action hits a creature, you can use one of the following Blade Flourish options of your choice. You can use only one Blade Flourish option per turn.
+       - Defensive Flourish: You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit. The damage equals the number you roll on the Bardic Inspiration die. You also add the
+                             number rolled to your AC until the start of your next turn.
+                             - Slashing Flourish: You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit and to any other creature of your choice that you can see within 
+                                                  5 feet of you. The damage equals the number you roll on the Bardic Inspiration die.
+                             - Mobile Flourish: You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit. The damage equals the number you roll on the Bardic Inspiration 
+                                                die. You can also push the target up to 5 feet away from you, plus a number of feet equal to the number you roll on that die. You can then immediately use your reaction to move up 
+                                                to your walking speed to an unoccupied space within 5 feet of the target.
+                             - Extra Attack: you can attack twice, instead of once, whenever you take the Attack action on your turn.
+       - Masters Flourish: whenever you use a Blade Flourish option, you can roll a d6 and use it instead of expending a Bardic Inspiration die.
+       
+       
+       
+   - - College of Spirits Abilities:
+       - Guiding Whispers: you can reach out to spirits to guide you and others. You learn the Guidance cantrip, which doesn’t count against the number of bard cantrips you know. For you, it has a range of 60 feet when you cast 
+                           it.
+       - Spiritual Focus: you employ tools that aid you in channeling spirits, be they historical figures or fictional archetypes. You can use the following objects as a spellcasting focus for your bard spells: a candle, crystal
+                          ball, skull, spirit board, or tarokka deck. when you cast a bard spell that deals damage or restores hit points through the Spiritual Focus, roll a d6, and you gain a bonus to one damage or healing roll
+                          of the spell equal to the number rolled.
+       - Tales from Beyond: you reach out to spirits who tell their tales through you. While you are holding your Spiritual Focus, you can use a bonus action to expend one use of your Bardic Inspiration and roll on the Spirit 
+                            Tales table using your Bardic Inspiration die to determine the tale the spirits direct you to tell. You retain the tale in mind until you bestow the tale’s effect or you finish a short or long rest. 
+                            You can use an action to choose one creature you can see within 30 feet of you (this can be you) to be the target of the tale’s effect. Once you do so, you can’t bestow the tale’s effect again until 
+                            you roll it again. You can retain only one of these tales in mind at a time, and rolling on the Spirit Tales table immediately ends the effect of the previous tale. If the tale requires a saving throw,
+                            the DC equals your spell save DC.
+                            Spirit Tales Table:
+                            Bardic Insp. Die      Tale Told Through You:
+                            1                     Tale of the Clever Animal. For the next 10 minutes, whenever the target makes an Intelligence, a Wisdom, or a Charisma check, the target can roll an extra die immediately after 
+                                                  rolling the d20 and add the extra die's number to the check. The extra die is the same type as your Bardic Inspiration die.
+                            2                     Tale of the Renowned Duelist. You make a melee spell attack against the target. On a hit, the target takes force damage equal to two rolls of your Bardic Inspiration die + your 
+                                                  Charisma modifier.
+                            3                     Tale of the Beloved Friends. The target and another creature of its choice it can see within 5 feet of it gains temporary hit points equal to a roll of your Bardic Inspiration 
+                                                  die + your Charisma modifier
+                            4                     Tale of the Runaway. The target can immediately use its reaction to teleport up to 30 feet to an unoccupied space it can see. When the target teleports, it can choose a number of
+                                                  creatures it can see within 30 feet of it up to your Charisma modifier (minimum of 0) to immediately use the same reaction.
+                            5                     Tale of the Avenger. For 1 minute, any creature that hits the target with a melee attack takes force damage equal to a roll of your Bardic Inspiration die.
+                            6                     Tale of the Traveler. The target gains temporary hit points equal to a roll of your Bardic Inspiration die + your bard level. While it has these temporary hit points, the 
+                                                  target’s walking speed increases by 10 feet and it gains a +1 bonus to its AC.
+                            7                     Tale of the Beguiler. The target must succeed on a Wisdom saving throw or take psychic damage equal to two rolls of your Bardic Inspiration die, and the target is incapacitated 
+                                                  until the end of its next turn.
+                            8                     Tale of the Phantom. The target becomes invisible until the end of its next turn or until it hits a creature with an attack. If it hits a creature with an attack during this 
+                                                  invisibility, the creature it hits takes necrotic damage equal to a roll of your Bardic Inspiration die and is frightened of the target until the end of the frightened creature's
+                                                  next turn.
+                            9                     Tale of the Brute. Each creature of the target’s choice it can see within 30 feet of it must make a Strength saving throw. On a failed save, a creature takes thunder damage equal
+                                                  to three rolls of your Bardic Inspiration die and is knocked prone. A creature that succeeds on its saving throw takes half as much damage and isn’t knocked prone.
+                            10                    Tale of the Dragon. The target spews fire from the mouth in a 30-foot cone. Each creature in that area must make a Dexterity saving throw, taking fire damage equal to four rolls 
+                                                  of your Bardic Inspiration die on a failed save, or half as much damage on a successful one.
+                            11                    Tale of the Angel. The target regains hit points equal to two rolls of your Bardic Inspiration die + your Charisma modifier, and you end one condition from the following list 
+                                                  affecting the target; blinded, deafened, paralyzed, petrified, or poisoned.
+                            12                    Tale of the Mind-Bender You envoke an incomprehensible fable from an otherworldly being. The target must succeed on an Intelligence saving throw or take psychic damage equal to 
+                                                  three rolls of your Bardic Inspiration die and be stunned until the end of its next turn.
+       - Spirit Session: spirits provide you with supernatural insights. You can conduct an hour-long ritual channeling spirits (which can be done during a short or long rest) using your Spiritual Focus. You can conduct the 
+                         ritual with a number of willing creatures equal to your proficiency bonus (including yourself). At the end of the ritual, you temporarily learn one spell of your choice from any class. The spell you 
+                         choose must be of a level equal to the number of creatures that conducted the ritual or less, the spell must of a level you can cast, and it must be in the school of Divination or Necromancy. The chosen 
+                         spell counts as a bard spell for you but doesn’t count against the number of bard spells you know. Once you perform the ritual, you can’t do so again until you start a long rest, and you know the chosen 
+                         spell until you start a long rest.
+       - Mystical Connection: you now have the ability to nudge the spirits of Tales from Beyond toward certain tales. Whenever you roll on the Spirit Tales table, you can roll the die twice and choose which of the two effects 
+                              to bestow. If you roll the same number on both dice, you can ignore the number and choose any effect on the table.
+                              
+                              
+                              
+   - - College of 
