--- a/npcs/Rogue Subclasses.yml
+++ b/npcs/Rogue Subclasses.yml
@@ -192,3 +192,29 @@
                        equal to your Wisdom modifier (minimum of once), and you regain all expended uses of it when you finish a long rest.
        - Eye for Weakness: you learn to exploit a creature’s weaknesses by carefully studying its tactics and movement. While your Insightful Fighting feature applies to a creature, your Sneak Attack damage against that creature
                            increases by 3d6.
+                           
+                           
+                           
+   - - Phantom Abilities:
+       - Whispers of the Dead: echoes of those who have died cling to you. Whenever you finish a short or long rest, you can gain one skill or tool proficiency of your choice, as a ghostly presence shares its knowledge with you.
+                               You lose this proficiency when you use this feature to choose a different proficiency that you lack.
+       - Wails from the Grave: as you nudge someone closer to the grave, you can channel the power of death to harm someone else as well. Immediately after you deal your Sneak Attack damage to a creature on your turn, you can 
+                               target a second creature that you can see within 30 feet of the first creature. Roll half the number of Sneak Attack dice for your level (round up), and the second creature takes necrotic damage 
+                               equal to the roll’s total, as wails of the dead sound around them for a moment. You can use this feature a number of times equal to your proficiency bonus, and you regain all expended uses when you
+                               finish a long rest.
+       - Tokens of the Departed: when a life ends in your presence, you're able to snatch a token from the departing soul, a sliver of its life essence that takes physical form: as a reaction when a creature you can see dies 
+                                 within 30 feet of you, you can open your free hand and cause a Tiny trinket to appear there, a soul trinket. The DM determines the trinket's form or has you roll on the Trinkets table in the 
+                                 Player's Handbook to generate it. You can have a maximum number of soul trinkets equal to your proficiency bonus, and you can't create one while at your maximum. You can use soul trinkets in the 
+                                 following ways;
+                                 - While a soul trinket is on your person, you have advantage on death saving throws and Constitution saving throws, for your vitality is enhanced by the life essence within the object.
+                                 - When you deal Sneak Attack damage on your turn, you can destroy one of your soul trinkets that's on your person and then immediately use Wails from the Grave, without expending a use of that 
+                                   feature.
+                                 - As an action, you can destroy one of your soul trinkets, no matter where it's located. When you do so, you can ask the spirit associated with the trinket one question. The spirit appears to you
+                                   and answers in a language it knew in life. It's under no obligation to be truthful, and it answers as concisely as possible, eager to be free. The spirit knows only what it knew in life, as 
+                                   determined by the DM.
+       - Ghost Walk: you can phase partially into the realm of the dead, becoming like a ghost. As a bonus action, you assume a spectral form. While in this form, you have a flying speed of 10 feet, you can hover, and attack 
+                     rolls have disadvantage against you. You can also move through creatures and objects as if they were difficult terrain, but you take 1d10 force damage if you end your turn inside a creature or an object. You
+                     stay in this form for 10 minutes or until you end it as a bonus action. To use this feature again, you must finish a long rest or destroy one of your soul trinkets as part of the bonus action you use to activate Ghost Walk.
+       - Death Knell: your association with death has become so close that you gain the following benefits;
+                      - When you use your Wails from the Grave, you can now deal the necrotic damage to both the first and the second creature.
+                      - At the end of a long rest, a soul trinket appears in your hand if you don't have any soul trinkets, as the spirits of the dead are drawn to you.
