--- a/npcs/Sorcerer Subclasses.yml
+++ b/npcs/Sorcerer Subclasses.yml
@@ -90,22 +90,110 @@
  
  
  
-    - - Shadow Magic Abilities: 
-        - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
-                            can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
-        - Strength of the Grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
-                                 reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
-        - Hound of Ill Omen: you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can 
-                             see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes - 
-                             - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
-                             - It appears with a number of temporary hit points equal to half your sorcerer level.
-                             - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
-                             - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
-                             The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
-                             can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
-                             disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
-        - Shadow Walk: you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
-                       light or darkness.
-        - Umbral Form: you can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
-                       creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
-                       die, or if you dismiss it as a bonus action
+   - - Shadow Magic Abilities: 
+       - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
+                           can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
+       - Strength of the Grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
+                                reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
+       - Hound of Ill Omen: you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can 
+                            see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes - 
+                            - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
+                            - It appears with a number of temporary hit points equal to half your sorcerer level.
+                            - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
+                            - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
+                            The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
+                            can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
+                            disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
+       - Shadow Walk: you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
+                      light or darkness.
+       - Umbral Form: you can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
+                      creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
+                      die, or if you dismiss it as a bonus action
+                       
+                       
+                       
+   - - Storm Sorcery Abilities:
+       - Wind Speaker: The arcane magic you command is infused with elemental air. You can speak, read, and write Primordial. Knowing this language allows you to understand and be understood by those who speak its dialects: 
+                       Aquan, Auran, Ignan, and Terran.
+       - Tempestuous Magic: you can use a bonus action on your turn to cause whirling gusts of elemental air to briefly surround you, immediately before or after you cast a spell of 1st level or higher. Doing so allows you to 
+                            fly up to 10 feet without provoking opportunity attacks
+       - Heart of the Storm: you gain resistance to lightning and thunder damage. In addition, whenever you start casting a spell of 1st level or higher that deals lightning or thunder damage, stormy magic erupts from you. This 
+                             eruption causes creatures of your choice that you can see within 10 feet of you to take lightning or thunder damage (choose each time this ability activates) equal to half your sorcerer level.
+       - Storm Guide: you gain the ability to subtly control the weather around you. If it is raining, you can use an action to cause the rain to stop falling in a 20-foot-radius sphere centered on you. You can end this effect 
+                      as a bonus action. If it is windy, you can use a bonus action each round to choose the direction that the wind blows in a 100-foot-radius sphere centered on you. The wind blows in that direction until the 
+                      end of your next turn. This feature doesn't alter the speed of the wind.
+       - Storms Fury: when you are hit by a melee attack, you can use your reaction to deal lightning damage to the attacker. The damage equals your sorcerer level. The attacker must also make a Strength saving throw against 
+                      your sorcerer spell save DC. On a failed save, the attacker is pushed in a straight line up to 20 feet away from you.
+       - Wind Soul: you gain immunity to lightning and thunder damage. You also gain a magical flying speed of 60 feet. As an action, you can reduce your flying speed to 30 feet for 1 hour and choose a number of creatures within
+                    30 feet of you equal to 3 + your Charisma modifier. The chosen creatures gain a magical flying speed of 30 feet for 1 hour. Once you reduce your flying speed in this way, you can't do so again until you 
+                    finish a short or long rest.
+                    
+                    
+                    
+   - - Wild Magic Abilities:
+       - Wild Magic Surge: your spellcasting can unleash surges of untamed magic. Immediately after you cast a sorcerer spell of 1st level or higher, the DM can have you roll a d20. If you roll a 1, roll on the Wild Magic Surge 
+                           table to create a random magical effect. The Wild Magic Surge table can be found in the Player's Handbook 
+       - Tides of Chaos: you can manipulate the forces of chance and chaos to gain advantage on one attack roll, ability check, or saving throw. Once you do so, you must finish a long rest before you can use this feature again.
+                         Any time before you regain the use of this feature, the DM can have you roll on the Wild Magic Surge table immediately after you cast a sorcerer spell of 1st level or higher. You then regain the use of 
+                         this feature.
+       - Bend Luck: you have the ability to twist fate using your wild magic. When another creature you can see makes an attack roll, an ability check, or a saving throw, you can use your reaction and spend 2 sorcery points to 
+                    roll 1d4 and apply the number rolled as a bonus or penalty (your choice) to the creature's roll. You can do so after the creature rolls but before any effects of the roll occur.
+       - Controlled Chaos: you gain a modicum of control over the surges of your wild magic. Whenever you roll on the Wild Magic Surge table, you can roll twice and use either number.
+       - Spell Bombardment: the harmful energy of your spells intensifies. When you roll damage for a spell and roll the highest number possible on any of the dice, choose one of those dice, roll it again and add that roll to 
+                            the damage. You can use the feature only once per turn.
+                            
+                            
+                            
+   - - Divine Soul Abilities:
+       - Divine Magic: Your link to the divine allows you to learn spells normally associated with the cleric class. When your Spellcasting feature lets you learn a sorcerer cantrip or a sorcerer spell of 1st level or higher, 
+                       you can choose the new spell from the cleric spell list or the sorcerer spell list. You must otherwise obey all the restrictions for selecting the spell, and it becomes a sorcerer spell for you. In 
+                       addition, choose an affinity for the source of your divine power; good, evil, law, chaos, or neutrality. You learn an additional spell based on that affinity, as shown below. It is a sorcerer spell for you
+                       but it doesn't count against your number of sorcerer spells known. If you later replace this spell, you must replace it with a spell from the cleric spell list.
+                       Affinity    Spell:
+                       Good        Cure Wounds
+                       Evil        Inflict Wounds
+                       Law         Bless
+                       Chaos       Bane
+                       Neutrality  Protection from Evil and Good
+       - Favored by the Gods: divine power guards your destiny. If you fail a saving throw or miss with an attack roll, you can roll 2d4 and add it to the total, possibly changing the outcome. Once you use this feature, you 
+                              can’t use it again until you finish a short or long rest.
+       - Empowered Healing: the divine energy coursing through you can empower healing spells. Whenever you or an ally within 5 feet of you rolls dice to determine the number of hit points a spell restores, you can spend 1 
+                            sorcery point to reroll any number of those dice once, provided you aren't incapacitated. You can use this feature only once per turn.
+       - Angelic Form: you can use a bonus action to manifest a pair of spectral wings from your back. While the wings are present, you have a flying speed of 30 feet. The wings last until you're incapacitated, you die, or you 
+                       dismiss them as a bonus action. The affinity you chose for your Divine Magic feature determines the appearance of the spectral wings; eagle wings for good or law, bat wings for evil or chaos, and dragonfly
+                       wings for neutrality.
+       - Unearthly Recovery: you gain the ability to overcome grievous injuries. As a bonus action when you have fewer than half of your hit points remaining, you can regain a number of hit points equal to half your hit point 
+                             maximum. Once you use this feature, you can’t use it again until you finish a long rest.
+                             
+                             
+                             
+   - - Draconic Bloodline Abilities:
+       - Dragon Ancestor: you choose one type of Dragon as your ancestor. The damage type associated with each Dragon is used by features you gain later. You can speak, read, and write Draconic. Additionally, whenever you make a
+                          Charisma check when interacting with Dragons, your Proficiency Bonus is doubled if it applies to the check.
+                          Draconic Ancestry Table:
+                          Dragon     Damage Type
+                          Black      Acid
+                          Blue       Lightning
+                          Brass      Fire
+                          Bronze     Lightning
+                          Copper     Acid
+                          Gold       Fire
+                          Green      Poison
+                          Red        Fire
+                          Silver     Cold
+                          White      Cold
+       - Draconic Resilience: As magic flows through your body, it causes physical Traits of your Dragon ancestors to emerge. Your hit point maximum increases by 1 and increases by 1 again whenever you gain a level in this class.
+                              Additionally, parts of your skin are covered by a thin sheen of dragon-like scales. When you aren’t wearing armor, your AC equals 13 + your Dexterity modifier.
+       - Elemental Affinity: when you Cast a Spell that deals damage of the type associated with your Draconic ancestry, you can add your Charisma modifier to one damage roll of that spell. At the same time, you can spend 1 
+                             sorcery point to gain Resistance to that damage type for 1 hour.
+       - Dragon Wings: you gain the ability to sprout a pair of Dragon wings from your back, gaining a flying speed equal to your current speed. You can create these wings as a Bonus Action on Your Turn. They last until you 
+                       dismiss them as a Bonus Action on Your Turn. You can’t manifest your wings while wearing armor unless the armor is made to accommodate them, and clothing not made to accommodate your wings might be 
+                       destroyed when you manifest them.
+       - Draconic Presence: you can channel the dread presence of your Dragon ancestor, causing those around you to become awestruck or Frightened. As an action, you can spend 5 Sorcery Points to draw on this power and exude an 
+                            aura of awe or fear (your choice) to a distance of 60 feet. For 1 minute or until you lose your Concentration (as if you were casting a Concentration spell), each Hostile creature that starts its turn
+                            in this aura must succeed on a Wisdom saving throw or be Charmed (if you chose awe) or Frightened (if you chose fear) until the aura ends. A creature that succeeds on this saving throw is immune to 
+                            your aura for 24 hours.
+                            
+                            
+                            
+   - - 
